<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/filePickerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="5"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        tools:ignore="UseCompoundDrawables">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:text="@string/text_choose_a_file"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_margin="8dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/filePickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_shape"
                android:contentDescription="@string/content_desc_folder_picker"
                android:padding="16dp"
                android:src="@drawable/folder_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

    </LinearLayout>

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/text_or_choose_a_file" />-->


    <TextView
        android:id="@+id/showFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dotted_border"
        android:padding="16dp"
        android:text="@string/text_chosen_song_replacement"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/filePickerLinearLayout" />


    <LinearLayout
        android:id="@+id/chooseModelLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/showFileName">


        <TextView
            android:id="@+id/chooseModelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/text_choose_model"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/selectModelSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_light"
            android:popupBackground="@android:color/holo_red_light"
            android:spinnerMode="dropdown">

        </Spinner>

    </LinearLayout>


    <!--    <ImageView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="60dp"-->
    <!--        android:background="@drawable/circle_shape"-->
    <!--        android:contentDescription="@string/content_desc_folder_picker"-->
    <!--        android:padding="16dp"-->
    <!--        android:src="@drawable/folder_24"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <ImageView
        android:id="@+id/showResultImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/circle_shape"
        android:contentDescription="@string/content_desc_folder_picker"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>